--- a/Bit202/style.css
+++ b/Bit202/style.css
@@ -160,7 +160,7 @@ span
     font-size: 18px;
     margin-bottom: 45px;
 }
-button
+.button
 {
 background-color: #019587;
 color: white;
@@ -275,13 +275,52 @@ services h1::after{
 .card:hover .pattern2{
     transform: translate(0 0);
 }
-
+/*--clients--*/
+.freelance
+{
+    width: 100%;
+    height: 290px;
+    background-color: #191919;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.freelance p{
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+.freelance .buttontwo{
+    background-color: #019587;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: 0.4s;
+}
 /*--PHOTO GALLERY--*/
 
 #service{
     width: 100%;
     padding: 70px 0;
     background: #363535;
+}
+.tittle-text{
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+    padding-bottom: 15px;
+    margin-bottom: 60px;
+    position: relative;
+    color: #009688;
+}
+.tittle-text h1{
+    color: #00a955;
+    font-size:35px;
 }
 .service-box{
     width: 80%;
@@ -309,7 +348,7 @@ services h1::after{
     top: 0;
     border-radius: 7px;
     cursor: pointer;
-    background: linear-gradient(rgba(0,0,0,0.5),#009688);
+    background: linear-gradient(rgba(0,0,0,0.5),#0c4914);
     opacity: 0;
     transition: 1s;
 }
@@ -397,6 +436,10 @@ footer p:nth-child(2)
 .social a:hover{
     transform: scale(1.3);
     transition: .3s;
+}
+.mail
+{
+    color: white;
 }
 .end
 {
